// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`executeQuery > createExecuteQueryCacheKey > should return cache key 1`] = `"{"metadata":[{"jaql":{"title":"Condition","dim":"[Commerce.Condition]","datatype":"text"}},{"jaql":{"title":"sum Cost","dim":"[Commerce.Cost]","datatype":"numeric","agg":"sum"}},{"jaql":{"title":"Age Range","dim":"[Commerce.Age Range]","datatype":"text","filter":{"members":["18-24"]},"datasource":{"title":"Sample ECommerce","live":false}},"panel":"scope"},{"jaql":{"title":"Gender","dim":"[Commerce.Gender]","datatype":"text","filter":{"members":["Male"]},"datasource":{"title":"Sample ECommerce","live":false}},"panel":"scope"}],"datasource":{"title":"Sample ECommerce","live":false},"by":"ComposeSDK","queryGuid":""}"`;

exports[`executeQuery > executePivotQuery > should call executePivotQuery from queryClient with correct args 1`] = `
[
  {
    "columnsAttributes": [
      {
        "__serializable": "DimensionalAttribute",
        "composeCode": "DM.Commerce.AgeRange",
        "dataSource": {
          "live": false,
          "title": "Sample ECommerce",
        },
        "description": "",
        "expression": "[Commerce.Age Range]",
        "name": "Age Range",
        "type": "text-attribute",
      },
    ],
    "count": undefined,
    "dataSource": "Sample ECommerce",
    "filterRelations": undefined,
    "filters": [
      {
        "__serializable": "MembersFilter",
        "attribute": {
          "__serializable": "DimensionalAttribute",
          "composeCode": "DM.Commerce.Gender",
          "dataSource": {
            "live": false,
            "title": "Sample ECommerce",
          },
          "description": "",
          "expression": "[Commerce.Gender]",
          "name": "Gender",
          "type": "text-attribute",
        },
        "composeCode": "filterFactory.members(DM.Commerce.Gender, ['Female'])",
        "config": {
          "deactivatedMembers": [],
          "disabled": false,
          "enableMultiSelection": true,
          "excludeMembers": false,
          "guid": "test-id",
          "locked": false,
        },
        "dataSource": undefined,
        "description": "",
        "filterType": "members",
        "members": [
          "Female",
        ],
        "name": "6765f4132d6",
        "type": "filter",
      },
    ],
    "grandTotals": {},
    "highlights": [
      {
        "__serializable": "MembersFilter",
        "attribute": {
          "__serializable": "DimensionalAttribute",
          "composeCode": "DM.Commerce.AgeRange",
          "dataSource": {
            "live": false,
            "title": "Sample ECommerce",
          },
          "description": "",
          "expression": "[Commerce.Age Range]",
          "name": "Age Range",
          "type": "text-attribute",
        },
        "composeCode": "filterFactory.members(DM.Commerce.AgeRange, ['18-24'])",
        "config": {
          "deactivatedMembers": [],
          "disabled": false,
          "enableMultiSelection": true,
          "excludeMembers": false,
          "guid": "test-id",
          "locked": false,
        },
        "dataSource": undefined,
        "description": "",
        "filterType": "members",
        "members": [
          "18-24",
        ],
        "name": "84fa8d5c2b2",
        "type": "filter",
      },
    ],
    "measures": [
      {
        "__serializable": "DimensionalBaseMeasure",
        "aggregation": "sum",
        "attribute": {
          "__serializable": "DimensionalAttribute",
          "composeCode": "DM.Commerce.Cost",
          "dataSource": {
            "live": false,
            "title": "Sample ECommerce",
          },
          "description": "",
          "expression": "[Commerce.Cost]",
          "name": "Cost",
          "type": "numeric-attribute",
        },
        "composeCode": "measureFactory.sum(DM.Commerce.Cost)",
        "dataSource": undefined,
        "description": "",
        "name": "sum Cost",
        "sort": 0,
        "type": "basemeasure",
      },
    ],
    "offset": undefined,
    "rowsAttributes": [
      {
        "__serializable": "DimensionalAttribute",
        "composeCode": "DM.Commerce.Condition",
        "dataSource": {
          "live": false,
          "title": "Sample ECommerce",
        },
        "description": "",
        "expression": "[Commerce.Condition]",
        "name": "Condition",
        "type": "text-attribute",
      },
    ],
  },
  undefined,
]
`;

exports[`executeQuery > executeQuery > should call executeQuery from queryClient 1`] = `
[
  {
    "attributes": [
      {
        "__serializable": "DimensionalAttribute",
        "composeCode": "DM.Commerce.Condition",
        "dataSource": {
          "live": false,
          "title": "Sample ECommerce",
        },
        "description": "",
        "expression": "[Commerce.Condition]",
        "name": "Condition",
        "type": "text-attribute",
      },
    ],
    "count": undefined,
    "dataSource": "Sample ECommerce",
    "filterRelations": undefined,
    "filters": [
      {
        "__serializable": "MembersFilter",
        "attribute": {
          "__serializable": "DimensionalAttribute",
          "composeCode": "DM.Commerce.AgeRange",
          "dataSource": {
            "live": false,
            "title": "Sample ECommerce",
          },
          "description": "",
          "expression": "[Commerce.Age Range]",
          "name": "Age Range",
          "type": "text-attribute",
        },
        "composeCode": "filterFactory.members(DM.Commerce.AgeRange, ['18-24'])",
        "config": {
          "deactivatedMembers": [],
          "disabled": false,
          "enableMultiSelection": true,
          "excludeMembers": false,
          "guid": "test-id",
          "locked": false,
        },
        "dataSource": undefined,
        "description": "",
        "filterType": "members",
        "members": [
          "18-24",
        ],
        "name": "84fa8d5c2b2",
        "type": "filter",
      },
    ],
    "highlights": [
      {
        "__serializable": "MembersFilter",
        "attribute": {
          "__serializable": "DimensionalAttribute",
          "composeCode": "DM.Commerce.Gender",
          "dataSource": {
            "live": false,
            "title": "Sample ECommerce",
          },
          "description": "",
          "expression": "[Commerce.Gender]",
          "name": "Gender",
          "type": "text-attribute",
        },
        "composeCode": "filterFactory.members(DM.Commerce.Gender, ['Male'])",
        "config": {
          "deactivatedMembers": [],
          "disabled": false,
          "enableMultiSelection": true,
          "excludeMembers": false,
          "guid": "test-id",
          "locked": false,
        },
        "dataSource": undefined,
        "description": "",
        "filterType": "members",
        "members": [
          "Male",
        ],
        "name": "9d2957eadd5",
        "type": "filter",
      },
    ],
    "measures": [
      {
        "__serializable": "DimensionalBaseMeasure",
        "aggregation": "sum",
        "attribute": {
          "__serializable": "DimensionalAttribute",
          "composeCode": "DM.Commerce.Cost",
          "dataSource": {
            "live": false,
            "title": "Sample ECommerce",
          },
          "description": "",
          "expression": "[Commerce.Cost]",
          "name": "Cost",
          "type": "numeric-attribute",
        },
        "composeCode": "measureFactory.sum(DM.Commerce.Cost)",
        "dataSource": undefined,
        "description": "",
        "name": "sum Cost",
        "sort": 0,
        "type": "basemeasure",
      },
    ],
    "offset": undefined,
    "ungroup": undefined,
  },
  undefined,
]
`;
